--- a/condition.yml
+++ b/condition.yml
@@ -1,27 +1,25 @@
 ---
 - name: first playbook
-  hosts: localhost
+  hosts: all
   become: yes
   vars:
-   - a: 10  
+    - a: 10
   tasks:
-   - name: install httpd
-     yum:
-       name: httpd
-       state: latest
-     when:
-        a == 9    
-   - name: start web server
-     service:
+    - name: install httpd software
+      yum:
+        name: httpd
+        state: latest
+      when:
+        a == 10    
+    - name: start web server
+      service:
         name: httpd
         state: started
-   - name: copy the files
-     copy:
-       src: index.html
-       dest: /var/www/html/index.html
-   - name: restart server
-     service:
+    - name: copying the files
+      copy:
+        src: index.html
+        dest: /var/www/html/index.html
+    - name: restart server
+      service:
         name: httpd
         state: restarted
-
-         
